--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
         margin: 0%;
         padding: 0%;
       }
+      *{
+        margin: 0;
+        padding: 0;
+      }
+      body{
+        background-image: url("background.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        height: 100vh;
+      }
     
        nav{
         background: linear-gradient(335deg,  #03001e 0%,#7303c0 0%,#ec38bc 50%, #fdeff9 100%);
