pac man changes

--- a/pacman.html
+++ b/pacman.html
@@ -4,9 +4,17 @@
 	<title>Gaming Zone</title>
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Permanent+Marker">
 	<style type="text/css">
-		body {
-			background-color: rgb(228, 216, 216);
-		}
+		*{
+            margin: 0;
+            padding: 0;
+          }
+          html{
+            background-image: url("background.jpg");
+            background-size: cover;
+      
+            background-repeat: no-repeat;
+            height: 100vh;
+          }
 
 		#pacman {
 			height: 470px;
